managed/apps/lm/components/mock-ui/base/deploy-mock-ui-static.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-ui-static
  namespace: lm
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: lm
      component: mock-ui
      container: static
  replicas: 2
  template:
    metadata:
      labels:
        app: lm
        component: mock-ui
        container: static
    spec:
      containers:
        - name: static
          image: gcr.io/tf-ops-cicd-97aadd/lm/mock-ui/main/static:latest
          imagePullPolicy: Always
          ports: 
            - containerPort: 80
          
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
      imagePullSecrets:
        - name: image-pull-secret
